# synth

./: .env.example  .gitignore  BEAST_MODE_COMPLETE.md  CACHE_PROOF.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  LICENSE  README.md  USAGE.md  docker-compose.yml  install.sh  osit.service  seeds.json  synth.service  test_beast_mode.sh  test_integration.sh
docs/: README.md
docs/api/: README.md
docs/architecture/: README.md
docs/caching/: README.md
docs/deployment/: README.md
docs/development/: README.md
docs/extractors/: README.md
examples/: quick_search.sh  start_crawl.sh
index/: meta.json
src/: main.rs  query_expansion.rs
src/api/: mod.rs
src/cache/: manager.rs  mod.rs
src/crawler/: mod.rs
src/embeddings/: mod.rs
src/extractors/: README.md  audio.rs  code_repo.rs  image.rs  mod.rs  pdf.rs  video.rs  web.rs
src/index/: mod.rs
src/llm/: mod.rs
src/mcp/: mod.rs
src/models/: mod.rs
src/scraper/: mod.rs
src/search/: ddg.rs  mod.rs  searxng.rs
src/shared/: hash.rs  mod.rs  url_validator.rs
src/youtube/: mod.rs
tests/: README.md  test_code_repo.sh  test_extractors.rs  test_integration.sh
