[package]
name = "osit"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTML parsing
scraper = "0.20"
html2text = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Async utilities
futures = "0.3"

# Environment variables
dotenvy = "0.15"

# CLI (for standalone use)
clap = { version = "4", features = ["derive"] }

# Vector DB (optional - can add later)
# qdrant-client = "1"

[dev-dependencies]
# Testing
tokio-test = "0.4"
