[package]
name = "osit"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTML parsing
scraper = "0.20"
html2text = "0.12"

# Full-text search engine
tantivy = "0.22"

# URL parsing and canonicalization
url = "2.5"

# Robots.txt parsing
robotparser = "0.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Async utilities
futures = "0.3"

# Environment variables
dotenvy = "0.15"

# CLI (for standalone use)
clap = { version = "4", features = ["derive"] }

# Time utilities
chrono = "0.4"

# Rate limiting
governor = "0.6"

[dev-dependencies]
# Testing
tokio-test = "0.4"
