[package]
name = "synth"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream", "cookies", "multipart"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTML parsing
scraper = "0.20"

# Full-text search engine
tantivy = "0.22"

# URL parsing and canonicalization
url = "2.5"
urlencoding = "2.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Async utilities
futures = "0.3"

# Environment variables
dotenvy = "0.15"

# Time utilities
chrono = "0.4"

# UUID for temp files
uuid = { version = "1.0", features = ["v4"] }

# Async trait support
async-trait = "0.1"

# PDF extraction
pdf-extract = "0.7"

# Image processing
image = "0.25"

# Base64 encoding
base64 = "0.22"

[dev-dependencies]
# Testing
tokio-test = "0.4"
